--- a/VRChat/36/1275636.html
+++ b/VRChat/36/1275636.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "963TjTSR35lXhGaish+GhLcRUdLdkVo3mqXB8eqWhNs="></script>
+    "cEHAwsSHNchDBJ+MqQFtEowSEVz7RmZoJKAfE6UQv6o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　マナ","description":"\nオリジナル3Dモデル  マナ\n制作者 かと\n\n2020/09/24 ver1.0.4  利用規約をVN3ライセンスに移行（モデルデータに変更はございません）\n\n商品概要＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\nUnityのHumanoid対応、fbx形式の3Dモデルです。\nVRCHAT等にご利用いただけます。\n\n・フルトラッキング対応\n・リップシンク対応\n・マテリアル数4\n・△27753\n・Dynamicbone設定済\n\n・アイトラッキング未設定\n・素体なし\n\n\n\n\n商品内容＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\n・MANA_v1.0.4.unitypackage\n・MANA_v1.0.4.fbx\n・MANA_v104.blend\n・readme.txt\n・MANA_license.pdf\n\n・texフォルダ\n→face.png\n→cloth.png\n→body.png\n→hair.png\n\n・psdフォルダ\n→face.psd\n→cloth.psd\n→body.psd\n→hair.psd\n＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\nVRCアップロード時注意\nDynamicboneで揺れものの設定をしています。\nあらかじめDynamicboneのインポートをお済ませください。\n＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n利用規約\nhttps://drive.google.com/file/d/1flRFS_HPIDxdhVjjo2H1Au36iD26cWtM/view?usp=sharing\n2020/09/24\nVN3ライセンスに移行しました。\n主な変更点は\n・営利利用可能に（制作者に許可取る必要はありません）\n・製品開発のためのソフトウェア（ゲーム含む）への組み込み可能に変更（配布の場合はデータを容易に取り出せない状態にしてください）\nになります。\n＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\n更新履歴__________________________________________________________________________\n2020/09/24\nver1.0.4　　\n　・利用規約をVN3ライセンスに移行\n2019/07/08\nver1.0.4　　\n  ・首元ウェイト修正\n　・テクスチャ表情部分変更\nver1.0.3\n  ・表情追加\n　・フルトラ対応（ボーン、ウェイト修正）\n　・リップシンク修正\n　・形状修正\n　・テクスチャ修正\n\n質問等がございましたら下記の連絡先にご連絡ください。\n\n連絡先\nMail:extremeoden@gmail.com","url":"https://booth.pm/ja/items/1275636","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1300"},"image":"https://booth.pximg.net/c/620x620/d3464c59-62a3-4b73-ba4c-8c05aee768c3/i/1275636/33e99ba8-605d-42e3-86ef-54546c99eb0b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="963TjTSR35lXhGaish+GhLcRUdLdkVo3mqXB8eqWhNs="></script>
+    nonce="cEHAwsSHNchDBJ+MqQFtEowSEVz7RmZoJKAfE6UQv6o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275636/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               628
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275636/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               628
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
