--- a/VRChat/71/1275071.html
+++ b/VRChat/71/1275071.html
@@ -99,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "venHlKDkibXg45nkomOz+kOqnHiyIDMeJkd5S34YMRE="></script>
+    "0H/yuStJxSQedzphxzUV7FBxCgAVqY9aqmfrBZ8qFfI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コンサートペンライト","description":"■　HKG Style Penlight　■","url":"https://booth.pm/ja/items/1275071","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ef636c3e-c379-4ba7-9bff-aa6b51029c71/i/1275071/a924d612-55e9-4793-8254-d4b551613ab2_base_resized.jpg"}
     </script>
@@ -112,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="venHlKDkibXg45nkomOz+kOqnHiyIDMeJkd5S34YMRE="></script>
+    nonce="0H/yuStJxSQedzphxzUV7FBxCgAVqY9aqmfrBZ8qFfI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -136,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275071/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               190
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275071/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               190
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
