--- a/VRChat/16/1275516.html
+++ b/VRChat/16/1275516.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0cxbfBzlQtoyTgSo8c8Rlp2jm2QHQBWvZ0CmKmfPkzo="></script>
+    "CbvkjSdfORS9Libp28wU2qzJJRM++gXoNPK3M3E4zXU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"めんだこ帽子","description":"メンダコを模した帽子の3Dモデルです。\nVRChat使用を想定して作成しましたが、使用用途は自由です。\nお手数ですがunityに取り込んだ際、yを180°回転させてください。アクセサリとして使用する場合、その後に方向や大きさを自由に変えモデルに着用させてください。\n\n\n商用、非商用問わず利用可能です。みんなでメンダコを愛でましょう！\n\n\n内容物\nmendako.blender\nmendako.fbx\nmendako.png\nmendakouv.png\n\nポリゴン数 : 1048\nマテリアル数 : 1\n\n\n禁止事項：\n再配布、転売、自作発言\n","url":"https://booth.pm/ja/items/1275516","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/28423f44-bfab-4ac0-a997-58dd5bb502cb/i/1275516/dce91d0b-b0c7-419c-a7f8-b4c69fd2ec41_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0cxbfBzlQtoyTgSo8c8Rlp2jm2QHQBWvZ0CmKmfPkzo="></script>
+    nonce="CbvkjSdfORS9Libp28wU2qzJJRM++gXoNPK3M3E4zXU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
