--- a/VRChat/00/1275500.html
+++ b/VRChat/00/1275500.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HQ+RvPx+IhSy57yJkarBcqbKFnr0WLr5r6q7AL5QJJE="></script>
+    "GdAJ7j5IgOAKFDwxz8+Szy5mmumNpi/0OWWm6ywkLZA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_指輪","description":"ＶＲＣ向けと書いてますが、基本ご自由にお使いください。改変や分解も自由です。\n\n※自作発言と再配布はおやめください。(再配布は一回かぎりでお願いします）\n\n△は１１６９０ポリゴンで少し多めです。改変なども自由なのでブレンダーなどでポリゴン数を減らすといいかもしれません。\n\nｆｂｘのファイルだけなのでテクスチャはありません。なのでマテリアルごとに分けています（画像２を参照）\n\n※画像はメタリックに見せるためにシェーダーを使っています。お好みのシェーダーを使いましょう。\n\n\n最近私の周りにカップルが多いのでリア充ばｋ・・・ではなく（）\nカップルがより仲良くなれるよう、指輪を作りました！\n\nとはいえカップル用じゃなくてもアクセサリーとしても指輪は使えますので是非！\n","url":"https://booth.pm/ja/items/1275500","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1275500/8244580b-e974-4a44-b0bb-a4a59e485c3a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HQ+RvPx+IhSy57yJkarBcqbKFnr0WLr5r6q7AL5QJJE="></script>
+    nonce="GdAJ7j5IgOAKFDwxz8+Szy5mmumNpi/0OWWm6ywkLZA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275500/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               296
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275500/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               296
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
