--- a/VRChat/60/1275360.html
+++ b/VRChat/60/1275360.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "anShVdZVWzbxnGeQZPiHNU41tcHhh0tCeXxzB2kMyZ8="></script>
+    "Pua+FhuSaVnjX0GserMdQGXk9kwuCWfQlrwX77654uU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スカルアクセサリー","description":"骨系アクセサリー\n・スカルフェイス\n・スカルネックレス\n・スカルリング\n・指骨指輪(左右)\n・頭蓋骨\n・掌骨(左右)\n\nを販売しています。","url":"https://booth.pm/ja/items/1275360","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/f705da9e-26cc-49c8-8814-d2354078c930/i/1275360/2249f353-84ce-47f7-bfbc-4526d19f8333_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="anShVdZVWzbxnGeQZPiHNU41tcHhh0tCeXxzB2kMyZ8="></script>
+    nonce="Pua+FhuSaVnjX0GserMdQGXk9kwuCWfQlrwX77654uU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275360/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275360/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
