--- a/VRChat/94/1272294.html
+++ b/VRChat/94/1272294.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "n2V/SjRFYrmrRWgEGjmaoRSXorg0gp6V1A5VWDGUwjY="></script>
+    "5s5hdMh56RwRegWcT6rb3wkSDLjg4pr1ad3ZiQgT3Tk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat想定】アフリカ式投げナイフ","description":"【製品内容】\n・UnityPackage \n・利用規約\n\n【説明】\nアフリカ式投げナイフです｡\nおまけでダマスカス模様のテクスチャを同梱しています｡\n△1060\n\n【利用規約】\n対象コンテンツの利用権利の販売となります。\nコンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n\n･他人が利用できるようにし、著作者の販売を阻害すること。\n･コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n\n･コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n･利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\n\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n","url":"https://booth.pm/ja/items/1272294","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/19841b6f-5483-4177-a358-c82f12b87a03/i/1272294/f29db839-13e4-4581-9b9c-c08c63753e3e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n2V/SjRFYrmrRWgEGjmaoRSXorg0gp6V1A5VWDGUwjY="></script>
+    nonce="5s5hdMh56RwRegWcT6rb3wkSDLjg4pr1ad3ZiQgT3Tk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1272294/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1272294/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
