--- a/VRChat/50/1268050.html
+++ b/VRChat/50/1268050.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0CR/ONKW5EDxXbGKr94IZfoqEL3U/HwXBf9/pNlcbU0="></script>
+    "5CX53wbV4cUOTZq4W8YerO4BVb/XIBuJWo0XjdJcVFQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】化野干【3Dモデル/オリジナルキャラクター】","description":"★☆★＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n本データの更新およびサポートは終了しました。\n本データの不具合修正やデータ追加などは、今後は行われません。\nご購入の際は上記事項をご了承の上でお願いします。\n\n長らくのご愛顧、誠にありがとうございました。\n\n★☆★＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\nVRChat用の設定が同梱してありますが、「Avatar2.0のみ」となります。\nまた、同梱UnityPackageは「2018バージョンのみ」となります。\n\n★☆★＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n\n\nご利用の前に必ず【ショップご利用の前に】【利用規約】【仕様書】をお読みください。\n本ショップの商品を購入した時点で、その内容に同意したと見なします。","url":"https://booth.pm/ja/items/1268050","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1268050/73ad5e23-a779-4cd8-a855-ac078f09430f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0CR/ONKW5EDxXbGKr94IZfoqEL3U/HwXBf9/pNlcbU0="></script>
+    nonce="5CX53wbV4cUOTZq4W8YerO4BVb/XIBuJWo0XjdJcVFQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1363
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1363
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
